# bevy-jam-7

./: .gitignore  Cargo.toml  dump_gameplay.sh  gameplay.txt  index.html
.github/workflows/: deploy.yml  release.yaml
assets/audio/sound_effects/: soundtrack.flp
assets/models/: Demo_level_heaven_sword.glb  Demo_level_heaven_sword.gltf  alarm_clock.blend  alarm_clock.glb  digital_alarm.blend  digital_alarm.glb  hammerhead walks.blend  hammerhead.blend  hammerhead.glb  katana.blend  katana.glb  puppy.blend  puppy.glb  scene.blend  scene.glb  tank.blend  time_field.blend  time_field.glb
assets/shaders/: goop_vertex.wgsl
docs/: README.md  enemies.md  fighting.md  gameplay.md  movement-and-stats.md  puzzles.md  quadratic-falloff.md  story.md
docs/puzzles/: seesaw-butterfly.md
src/: audio.rs  main.rs
src/menus/: credits.rs  main.rs  mod.rs  pause.rs  victory.rs
src/screens/: gameplay.rs  mod.rs
src/screens/gameplay/: alarm_clock.rs  arena.rs  character_controller.rs  checkpoints.rs  cloud_goop.rs  combo_system.rs  enemy.rs  enemy_spawn.rs  events.rs  fall_death.rs  flower_capsule.rs  game_states.rs  hammerhead.rs  hide_colliders.rs  hud.rs  katana.rs  mod.rs  particle_system.rs  player.rs  powerups.rs  spawn_enemy_waves.rs  spawn_zones.rs  ui.rs  world_butterflies.rs
src/theme/: interaction.rs
