[package]
name = "bevy-jam-7"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian3d = "0.5.0"
bevy = "0.18.0"
bevy-inspector-egui = "0.36.0"
bevy_seedling = "0.7.0"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
