[package]
name = "bevy-jam-7"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = "0.5.0"
avian_rerecast = "0.4.0"
bevy = { version = "0.18.0", default-features = false, features = [
  # 2d
  "2d_bevy_render",
  "default_app",
  "picking",
  "scene",
  # 3d
  "3d_bevy_render",
  # ui
  "ui_api",
  "ui_bevy_render",
  # default_platform
  "android-game-activity",
  "bevy_gilrs",
  "bevy_winit",
  "default_font",
  "multi_threaded",
  "std",
  "sysinfo_plugin",
  "wayland",
  "webgpu",
  "x11",
] }
bevy-inspector-egui = "0.36.0"
bevy_landmass = "0.11.0"
bevy_rerecast = "0.4.0"
bevy_seedling = "0.7.0"
bevy_skein = "0.5.0"
landmass_rerecast = "0.2.0"
bevy_framepace = "0.21"
rand = "0.10"
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
noisy_bevy = "0.13.0"
bevy_mesh = "0.18.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4.1", features = ["wasm_js"] }

[[bin]]
name = "bevy-jam-7"
path = "src/main.rs"

[features]
default = ["dev"]
dev = [
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    "bevy/bevy_ui_debug",
    "bevy/track_location",
    "bevy/hotpatching"
]
dev_native = [
    "dev",
    "bevy/file_watcher",
    "bevy/embedded_watcher",
]

[package.metadata.bevy_cli.release]
default-features = false

[package.metadata.bevy_cli.web]
default-features = false

[package.metadata.bevy_cli.web.dev]
features = ["dev"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"

[package.metadata.bevy_lint]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.web-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4

[profile.ci.package."*"]
opt-level = 0
